# claude-docchat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  claude_desktop_config.json  pyproject.toml  setup.py
opis-projektu/: PROMPT-DOSSIER.md
src/: __init__.py  mcp_server_official.py
src/config/: settings.py
src/services/: embedding_service.py  file_monitor_service.py  indexing_service.py
src/services/processors/: docx_processor.py  pdf_processor.py  processor_factory.py  txt_processor.py
src/utils/: error_handler.py
